# kubernetes_python_tasks

./: .coverage  .dockerignore  .gitignore  K8S_DEPLOYMENT.md  README.md  docker-compose.yml  dockerfile  main.py  mariadb.Dockerfile  mariadb.dockerfile  pyproject.toml  rebuild.sh  test.db
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  mariadb-operator-instance.yaml  mariadb-pvc.yaml  mariadb-resources.yaml  mariadb-service.yaml  mariadb-statefulset.yaml  namespace.yaml  secret.yaml
src/: main.py
src/backend/: config.py  database.py  models.py
src/backend/api/: routes.py
src/exercises/: dictionary.py  exercise1.py  nth_char.py  spending.py
src/tests/: conftest.py  test_api.py  test_dictionary.py  test_exercise1.py  test_nth_char.py  test_spending.py
